# hellohttp

./: .bazelrc  .gitignore  BUILD.bazel  Dockerfile  README.md  WORKSPACE  bazel-bin  bazel-hellohttp  bazel-out  bazel-testlogs  deployment.yml  gcloud  go.mod  service.yml
.circleci/: config.yml
.github/workflows/: build_and_test.yml
autoscale/: autoscale.yml
backend/: Dockerfile
backend/src/: BUILD.bazel  backend.go  route-types.go
cli/: BUILD.bazel  get-latest.go
config/: testconfig.yml
deployments/: hellohttp-backend.yml  hellohttp-foo.yml  hellohttp.yml  helloload.yml  mysql.yml  wedding.yml
docker/backend/: Dockerfile
docker/hello2/: Dockerfile
foo/: Dockerfile  hellohttp-foo.go
ingress/: ingress.yml
mysql/: config.yml  configmap.yml  pvc.yml  secrets.yml
nodes/: hellohttp-foo.yml  hellohttp.yml
services/: hellobazel.yml  hellohttp-backend.yml  hellohttp-foo.yml  hellohttp.yml  helloload.yml  mysql.yml
src/: hello.go  jr
src/hello/: BUILD.bazel  routes.go
src/hellohttp-backend/: BUILD.bazel  backend.go
src/jregex/: jregex.go
src/lib/config/: BUILD.bazel  config.go
src/lib/db/: BUILD.bazel  db-types.go
src/lib/jregex/: BUILD.bazel  jregex.go
src/lib/routes/: BUILD.bazel  route-types.go
src/lib/utils/: BUILD.bazel  util.go
src/load/: BUILD.bazel  load.go
src/pages/: BUILD.bazel
src/pointers/: BUILD.bazel  point.go
src/routes/: pages.go  route-types.go  routes.go
storage/: volume.yml
tmp/tail/: tail
