load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cli_lib",
    srcs = ["get-latest.go"],
    importpath = "github.com/jasonmkurtz/hellohttp/cli",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "cli",
    embed = [":cli_lib"],
    visibility = ["//visibility:public"],
)
