load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:image.bzl", "container_image")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

# gazelle:prefix github.com/jasonmkurtz/hellohttp
gazelle(name = "gazelle")

go_library(
    name = "hellohttp_lib",
    srcs = ["routes.go"],
    importpath = "github.com/jasonmkurtz/hellohttp/src/hello",
    visibility = ["//visibility:private"],
    deps = [
        "//src/lib/config",
        "//src/lib/db",
        "//src/lib/jregex",
        "//src/lib/routes:routetypes",
    ],
)

go_binary(
    name = "hellobin",
    embed = [":hellohttp_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "hello-container",
    embed = [":hellohttp_lib"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "hello",
    base = ":hello-container",
    ports = ["5000"],
    stamp = True
)
