load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "load_lib",
    srcs = ["load.go"],
    importpath = "github.com/jasonmkurtz/hellohttp/src/load",
    visibility = ["//visibility:private"],
    deps = ["//src/lib/routes"],
)

go_binary(
    name = "load",
    embed = [":load_lib"],
    visibility = ["//visibility:public"],
)
