load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "pointers_lib",
    srcs = ["point.go"],
    importpath = "github.com/jasonmkurtz/hellohttp/src/pointers",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "pointers",
    embed = [":pointers_lib"],
    visibility = ["//visibility:public"],
)
