load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

# gazelle:prefix github.com/jasonmkurtz/hellohttp
gazelle(name = "gazelle")

go_library(
    name = "db",
    srcs = ["db-types.go"],
    importpath = "github.com/jasonmkurtz/hellohttp/src/lib/db",
    visibility = ["//visibility:public"],
    deps = ["@mysql-driver//:mysql"],
)
